--- a/styles/style.css
+++ b/styles/style.css
@@ -119,6 +119,7 @@
   margin-bottom: 0;
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-evenly;
   gap: 40px;
   padding-left: 0;
 }
