--- a/styles/style.css
+++ b/styles/style.css
@@ -245,7 +245,7 @@
 
 .person_name_feynman {
   left: 319px;
-  top: 0;
+  top: -30px;
 }
 
 .person_name_burbidge {
@@ -260,7 +260,7 @@
 
 .person_name_mitchell {
   left: 142px;
-  bottom: 18px;
+  bottom: 82px;
 }
 
 .person_name_tarter {
