--- a/styles/style.css
+++ b/styles/style.css
@@ -306,12 +306,10 @@
 }
 
 .membership__steps {
-  margin: 0, auto;
   display: flex;
   align-items: flex-start;
   justify-content: center;
   list-style-type: none;
-  padding: auto;
   margin: 100px 0 0;
 }
 
@@ -340,22 +338,46 @@
 }
 
 .footer {
+  font-family: sans-serif;
+  background-color: #1f1f1f;
+  padding: 60px 80px;
+  color: #ffffff;
+  width: 100%;
+  padding: 60px 80px;
+  bottom: 0;
+  left: 0;
   box-sizing: border-box;
+  position: relative;
 }
 
 .footer__columns {
+  flex-wrap: wrap;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-start;
+  margin-bottom: 100px;
 }
 
 .footer__column_content_hours {
+  margin-right: 80px;
 }
 
 .footer__column_content_social {
+  margin: 0;
+  padding: 0;
 }
 
 .footer__logo {
+  position: absolute;
+  left: 80px;
+  width: 58px;
+  height: 80px;
 }
 
 .footer__column-heading {
+  margin-top: 0;
+  margin-bottom: 4px;
+  margin-right: 0;
 }
 
 .footer__list {
@@ -366,15 +388,23 @@
 }
 
 .footer__list-item {
+  margin-top: 16px;
 }
 
 .footer__column-link {
+  display: flex;
+  align-items: flex-start;
+  padding: 0;
   color: white;
   text-decoration: none;
 }
 
 .footer__social-icon {
+  padding: 0;
+  width: 16px;
+  margin-right: 10px;
 }
 
 .footer__copyright {
+  margin: 0;
 }
